# Zope

./: .bzrignore  .coveragerc  .editorconfig  .gitignore  .meta.toml  .pre-commit-config.yaml  .project  .pydevproject  .readthedocs.yaml  .travis.yml  AC-vs-DTML-TODO.txt  BORKED_DEPENDENCIES.rst  CHANGES.rst  CONTRIBUTING.md  COPYRIGHT  HOWTO.md  LICENSE.txt  MANIFEST.in  Makefile  README  README.md  README.rst  README.txt  TODO.txt  ZODB1.rst  ZODB1.stx  ZODB2.rst  ZODB2.stx  ZOPE_APP_DEPENDENCIES.rst  alltests.cfg  appveyor.yml  autoupdate.sh  bootstrap.py  build_extensions.py  build_index.py  build_index.sh  build_pcgi.py  buildout.cfg  check_zope_app_deps.sh  conf.py  (+35 more)
.static/: default.css
2.10/: setup.py  test.py
2.12/: .bzrignore  README.txt  bootstrap.py  dependencies.cfg  setup.py
2.9/: README.txt  configure  setup.py
Extensions/: README.txt
ZServer/: CHANGES.txt  DebugLogger.py  FCGIServer.py  FTPRequest.py  FTPResponse.py  FTPServer.py  HTTPResponse.py  HTTPServer.py  ICPServer.py  INSTALL.txt  PCGIServer.py  Producers.py  README.txt  WebDAVSrcHandler.py  ZServerFTP.py  ZServerPCGI.py  ZService.py  __init__.py  start.py  zinit.py  zope_handler.py
Zope-2_8-20050809-1700/: README.txt  setup.py  test.py
Zope-2_8-20050811-1700/: configure
articles/: ZODB1.rst  (+2 more)
pcgi/: Makefile.in  README  config.h.in  configure  configure.in  manifest  parseinfo.c  pcgi-wrapper.c  pcgi.h  pcgi_publisher.py
pcgi/Example/: pcgitest  pcgitime.py
pcgi/MrCreosote/: README.MrCreosote  creosote.c  creosote.h  creosote.py
pcgi/Test/: README.parseinfo
pcgi/Util/: README  killpcgi.py  pcgifile.py
pcgi/Win32/: Makefile.nt  README.NT
(+6236 files in other folders)
